# tigerbeetle-rs

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE.MIT  README.md  rust-toolchain.toml
.cargo/: config
core/: Cargo.toml
core/examples/: c_port_low_level.rs  first.rs
core/src/: account.rs  callback.rs  error.rs  handle.rs  lib.rs  packet.rs  transfer.rs  util.rs
core/src/account/: balance.rs  filter.rs
core/src/util/: owned_slice.rs  raw_const_ptr.rs  send_marker.rs
examples/: c_port_high_level.rs  first.rs
src/: account.rs  blob.rs  error.rs  lib.rs  low.rs  packet_guard.rs  reply.rs  resource_pool.rs  transfer.rs  util.rs
src/low/: callback.rs  handle.rs  packet.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs  tb_client.h  wrapper.h
xtask/: Cargo.toml
xtask/src/: main.rs
