[package]
name = "tigerbeetle"
version = "0.13.36"
edition = "2021"
license = "MIT"

[features]
tokio-rt-multi-thread = ["tokio/rt-multi-thread"]

[dependencies]
tigerbeetle-sys = { version = "0.13.36", path = "sys", features = ["generated-safe"] }
bytemuck = "1.13.1"
tokio = { version = "1.28.1", features = ["sync"] }

[dev-dependencies]
pollster = { version = "0.3.0", features = ["macro"] }

[workspace]
members = ["sys", "core"]
