[package]
name = "tigerbeetle"
version = "0.2.0+0.13.36"
edition = "2021"
license = "MIT"

[features]
tokio-rt-multi-thread = ["tigerbeetle-core/tokio-rt-multi-thread"]

[dependencies]
tigerbeetle-core = { version = "=0.2.0", path = "core" }
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
tokio = { version = "1.28.1", features = ["sync"] }

[dev-dependencies]
pollster = { version = "0.3.0", features = ["macro"] }

[workspace]
members = ["sys", "core"]
