[package]
name = "tigerbeetle-unofficial-core"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Safe low level callback-based async bindings to tigerbeetle client library."
repository.workspace = true
license.workspace = true
categories = ["api-bindings", "asynchronous", "database", "finance"]
include = ["/src/**", "/examples/**", "/Cargo.toml", "/LICENSE-*", "/README"]

[features]
tokio-rt-multi-thread = ["dep:tokio", "tokio/rt-multi-thread"]
tokio = ["dep:tokio"]

[dependencies]
sys = { package = "tigerbeetle-unofficial-sys", version = "=0.2.1", path = "../sys", features = ["generated-safe"] }
bytemuck = "1.13.1"
sptr = "0.3.2"
tokio = { version = "1.28.1", optional = true }
