[package]
name = "tigerbeetle-sys"
version = "0.13.13"
edition = "2021"
license = "MIT"

[features]
generated-safe = []

[dependencies]
bitflags = "2.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[build-dependencies]
bindgen = "0.65.1"
curl = "0.4.44"
zip = "0.6.5"
syn = { version = "2.0.16", features = ["parsing", "full", "printing", "visit"], default-features = false }
quote = { version = "1.0.27", default-features = false }
proc-macro2 = { version = "1.0.57", default-features = false }
