[package]
name = "tigerbeetle-unofficial-sys"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version.workspace = true
description = "Native bindings to the tigerbeetle library"
repository.workspace = true
license.workspace = true
categories = ["external-ffi-bindings"]
include = ["/src/**", "/Cargo.toml", "/LICENSE-*", "/tigerbeetle", "/build.rs"]

[features]
generated-safe = []

[dependencies]
bitflags = "2.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[build-dependencies]
bindgen = "0.65.1"
fs_extra = "1.3.0"
syn = { version = "2.0.16", features = ["parsing", "full", "printing", "visit"], default-features = false }
quote = { version = "1.0.27", default-features = false }
proc-macro2 = { version = "1.0.57", default-features = false }
